# bot-beauty-salon

./: .env.example  .gitignore  4-bot-beauty-salon.md  README.md  pyproject.toml  render.yaml  requirements.txt
scripts/: seed_demo.py
src/: config.py  db.py  keyboards.py  main.py  models.py  states.py  utils.py
src/handlers/: booking.py  start.py
src/services/: admin_notifier.py
