[project]
name = "bot-beauty-salon"
version = "0.1.0"
description = "Telegram bot for beauty salon booking"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["mypy>=1.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"
